TestSuite/Verification/Error/Serial/Data-Management/LocalAllocationTestWithInlining.par
LocalAllocationTestWithInlining{


seq test2([Int] input) : Int {
    var Int a = #input
    var [Int] b = init_List([10])
    var [Int] B = [1,2,3,4,5,6,7,8,9,0]
    var [[Int]] c = init_List([10,9])
    var [[Int]] C = [[1,2,3,4,5,6,7,8,9,0], [1,2,3,4,5,6,7,8,9]]
    var [[[Int]]] d = init_List([10,9,8])
    var [[[Int]]] D = [[[1,2,3,4,5,6,7,8,9,0], [1,2,3,4,5,6,7,8,9]],[[1,2,3,4,5,6,7,8,9,0], [1,2,3,4,5,6,7,8,9]]]
    return 0
}

seq main() : Int {

    var [Int] input = init_List([10])
    var Int a = test2(input)
return 0 
}}